--- a/17.3_activities/01_Positioning_Elements/3_inline_block_elements/unsolved/css/index.css
+++ b/17.3_activities/01_Positioning_Elements/3_inline_block_elements/unsolved/css/index.css
@@ -5,6 +5,39 @@ nav {
 
 /* target the class of inline-block below */
 
+.inline-block {
+  display:inline-block;
+  padding:15px;
+}
+
 /* target the class of .left below */
 
+.left {
+  height: 500px;
+  float:left;
+  background-color: #f1f1f1;
+  width:30%;
+  text-align:center;
+
+}
+
 /* target the class of .right below */
+
+.right {
+  height: 500px;
+  float:left;
+  background-color: #a3d1fe;
+  width:70%;
+  text-align: center;
+}
+
+.card {
+  display:inline-block;
+  background-color: #c6c6c6;
+  border-radius: 5px;
+  height: 200px;
+  width:150px;
+  margin:100px 35px 35px 35px;
+  
+
+}
