--- a/17.3_activities/02_Positioning_Relative_Absolute/unsolved/css/index.css
+++ b/17.3_activities/02_Positioning_Relative_Absolute/unsolved/css/index.css
@@ -15,17 +15,28 @@ body {
   padding: 30px;
   margin: 10px;
   display: flex;
+  position:relative;
+  top:0;
+  right:0;
+
+
 }
 .absolute {
   height: 150px;
   width: 150px;
   background-color: red;
   color: white;
+  position:absolute;
+  top: 0px;
+  left:0px;
 
 }
 .fixed {
   height: 200px;
   width: 200px;
   background-color: green;
+  position:fixed;
+  top:30px;
+  right:0;
 
 }
