--- a/18.1-activities/02_Sizing_With_Flex_Items/unsolved/css/index.css
+++ b/18.1-activities/02_Sizing_With_Flex_Items/unsolved/css/index.css
@@ -24,13 +24,7 @@ It is highly recommended to try out these commands in chromes web inspector to s
 - justify-content documentation - https://www.w3schools.com/cssref/css3_pr_justify-content.asp
 */
 .alignItems {
-  /*
-  - under this comment type out the css property justify-content.
-  - Try out the following properties of align-items
-  - center
-  - flex-end
-  - flex-start
-  */
+  align-items: center;
 
 }
 .justifyContent {
@@ -45,6 +39,9 @@ It is highly recommended to try out these commands in chromes web inspector to s
 - space-evenly
 */
 
+justify-content: flex-end;
+
+
 }
 .perfectlyCentered {
 /*
@@ -53,4 +50,20 @@ It is highly recommended to try out these commands in chromes web inspector to s
 - Reload the browser and see for yourslef that your item is perfectly centered!
 */
 
+justify-content: center;
+align-items: center;
+
+}
+
+
+.myItems {
+display:flex;
+justify-content: center;
+align-items: center;
+}
+
+.myItems p {
+  background-color:chartreuse;
+  padding: 2px;
+  margin: 5px;
 }
