--- a/18.2-activities/unsolved/css/style.css
+++ b/18.2-activities/unsolved/css/style.css
@@ -3,10 +3,121 @@ body {
 }
 
 /* Grid CSS */
+#heroGrid {
+  margin:0px 5%;
+  display: grid;
+  min-height:500px;
+  height: 70vh;
+  grid-template-columns: 75% 25%;
+  grid-template-rows: 75% 25%;
+  grid-template-areas: 
+    "featuredProduct secondaryProduct"
+    "featuredProduct CTA" ;
+}
+
+#featuredProduct {
+  grid-area: featuredProduct;
+  background-image:url("../images/furniture1.png") ;
+}
+
+#secondaryProduct {
+  grid-area: secondaryProduct;
+  background-image:url("../images/furniture2.png") ;
+}
+
+#CTA {
+  grid-area: CTA;
+  background-image:url("../images/woodbg.png") ;
+  justify-content: space-around;
+  cursor:pointer;
+}
+
+.heroGridArea {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size:cover;
+  align-items: center; 
+  display: flex;
+  position:relative;
+
+}
+
+
+#headline {
+  border-bottom: 5px solid #ff6200;
+  background-color:rgba(255,255,255, 0.8);
+  position:absolute;
+  top: 100px;
+  right:-50px;
+  z-index:99;
+  padding:20px;
+}
+
 
 
 /* Category Grid CSS */
 
+.subHeading {
+  text-align: center;
+  border-bottom: 2px solid black;
+  width: 300px;
+  margin: 50px auto;
+}
+
+#categoryGrid {
+  margin:0px 5%;
+  display: grid;
+  grid-template-rows: 300px 300px 300px;
+  grid-template-columns: 1fr 1fr 1fr;
+
+  grid-template-areas:
+  "bookcases bedroom patio"
+  "couches couches patio "
+  "desks desks desks "
+  ;
+}
+#bookcases { 
+  grid-area: bookcases;
+  background-image:url("../images/bookcases.png");
+}
+#bedroom { 
+  grid-area: bedroom;
+  background-image:url("../images/beds.png");
+}
+
+#couches { 
+  grid-area: couches;
+  background-image:url("../images/couch.png");
+}
+
+#patio { 
+  grid-area: patio;
+  background-image:url("../images/patio.png");
+}
+
+#desks { 
+  grid-area: desks;
+  background-image:url("../images/desks.png");
+}
+
+.categoryGridArea {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size:cover;
+  margin:5px;
+  align-content: end; 
+  display: grid;
+  cursor:pointer;
+}
+
+.heading { 
+  background-color: rgba(0,0,0,0.7);
+  padding:15px;
+  height:25px;
+  color:white;
+  font-size:18px;
+  border-bottom: 5px solid #ff6200;
+}
 
 
 
@@ -74,3 +185,51 @@ h4 {
   margin: 0px 0px;
   color: #636364;
 }
+
+
+@media only screen and (max-width: 1000px) {
+
+  #navigation {
+    display: none;
+  }
+  .icons {
+    margin-left:auto;
+  }
+
+
+
+}
+
+
+
+@media only screen and (max-width: 600px) {
+
+  #headline {
+    position: static;
+    margin:20px;
+  }
+
+  #heroGrid {
+
+    grid-template-areas:
+    "featuredProduct featuredProduct"
+    "secondaryProduct CTA";
+
+  }
+
+  #categoryGrid {
+    grid-template-rows: 300px 300px 300px 300px 300px ;
+    grid-template-columns: 1fr;
+    grid-template-areas:
+    "bookcases"
+    "bedroom"
+    "patio"
+    "couches"
+    "desks";
+
+  }
+
+
+
+
+} 
