--- a/18.3-activities/03_keyframes/unsolved/css/index.css
+++ b/18.3-activities/03_keyframes/unsolved/css/index.css
@@ -1,9 +1,11 @@
 .bounceMe {
   /* Add the animation bounceArrow here */
+ animation: bounceArrow .7s infinite;
 
 }
 .spinMe {
   /* Add the animation for spin on the line below  */
+ animation: spin 2s infinite;
 
 }
 #progressbar {
@@ -18,62 +20,74 @@
   height: 20px;
   border-radius: 5px;
   /* add the animation name here for the progress bar */
+  animation: loadBar 4s;
+  animation-fill-mode: forwards;
+
 }
 .movingBox {
   width: 50px;
   height: 50px;
   background-color: red;
   /* Add the animation name here to mox the box */
-
+  animation: movingBox 10s infinite;
 }
 
 
 @keyframes bounceArrow {
   from {
+    margin-top:0px;
 
   }
   50% {
+    margin-top:7px;
 
   }
   to {
-
+    margin-top:0px;
   }
 }
 
 @keyframes spin {
   from {
+    transform: rotate(180deg);
 
   }
   to {
+    transform: rotate(-180deg);
 
   }
 }
 
 @keyframes loadBar {
   from {
+    width:40%
 
   }
   to {
+    width:100%
 
   }
 }
 
 @keyframes movingBox {
-  from {
-
-  }
+  
   25% {
-
+    background-color: red;
+    border:navy 1px solid;
+    transform:translate(100px, 20px)
   }
-  50% {
+  50% { 
+    background-color: green;
+    transform:translate(20px, 10px);
+  } 
 
-  }
+  
   75% {
-
+    background-color: orange}
+  100% {
+    background-color: blue;
   }
-  to {
-
-  }
+  
 }
 
 
