--- a/20.2-activities/Unsolved/css/index.css
+++ b/20.2-activities/Unsolved/css/index.css
@@ -1,3 +1,155 @@
+h1, h2, h3, h4, h5, h6 {
+
+  font-family:'Anton',sans-serif;
+
+}
+
+p { 
+  font-family:'Jura',sans-serif;
+}
+
+.btn-primary {
+  color: #fff;
+  background-color: purple;
+  border-color: purple;
+}
+
+
+
+/* Navigation Styles */
+
+.customNav {
+  position: fixed;
+  width:100%;
+  background: url("../images/transparency.png");
+  background-color: transparent  !important;
+  background-size: cover;
+  z-index:10;
+}
+
+.navbar-nav {
+  margin-left:auto;
+  margin-right:0 auto !important;
+}
+
+.navbar-brand img {
+  padding-right:15px;
+  width:65px;
+}
+
+.nav-item {
+  margin: 0px 15px;
+}
+
+.dropdown-menu {
+  background: url("../images/transparency.png");
+  background-color: transparent  !important;
+  background-size: cover;
+
+}
+
+.dropdown-item:focus, .dropdown-item:hover {
+
+  color: #16181b;
+  text-decoration: none;
+  background:black
+
+}
+
+.customNav a {
+  color:white !important;
+}
+
+.navCTA {
+  font-size:15px;
+
+}
+
+
+/* Jumbotron Hero section */
+
+.rockBackground {
+
+  background-image: url("../images/rockOn_dark.jpg");
+  background-size: cover;
+  background-repeat:no-repeat;
+  height:500px;
+  height: calc(100vh - 100px);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.jumboCopy h1 {
+
+  font-size: 5rem; 
+
+  
+}
+
+.jumboCopy {
+  width:70%;
+  max-width: 700px;
+  color:goldenrod;
+  text-align:center; 
+}
+
+.tickets{
+  background-color:coral;
+  border:1px solid coral;
+}
+
+/* Cards */
+
+.card {
+  margin: 0 auto;
+}
+
+.content {
+  padding:50px;
+}
+
+.sectionHeading { 
+  text-align: center;
+}
+
+.showsNear {
+  padding: 0 30px 30px 30px;
+}
+
+
+.cardContainer {
+  margin-top: 20px;
+  text-align:center;
+}
+
+ /* Content Rows  */
+.valueProp {
+margin-top:15px;
+margin-bottom:15px;
+
+}
+
+.sideAccent {
+  background:#007bff;
+  width:15px;
+
+}
+
+.imageContainer {
+  padding: 50px;
+}
+.imageContainer img {
+width:100%;
+
+}
+
+
+
+/* footer styles  */
+
+
 footer {
   position: absolute;
   width: 100%;
@@ -6,9 +158,32 @@ footer {
   background-color: #f5f5f5;
   margin-top: 50px;
 } 
-.cardContainer {
-  margin-top: 20px;
+
+
+.emailContain {
+  background: url("../images/emailBG.jpg");
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 500px;;
 }
-.card {
-  margin: 0 auto;
+
+
+form { 
+  width:500px; 
+  background-color: white;
+  margin: 35px auto;
+  padding:50px;
+  border: 1px solid #f2f2f2;
+
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.5), 0 0 40px rgba(0, 0, 0, 0.5);
+
+
 }
+
+
+
+
+
